@@ -37,15 +37,16 @@ implemented::
         /** Path that contains VOD streams. */
         public String playbackPath = "videoStreams/";
         
-        public String generateFilename(IScope scope, String name) {
+        public String generateFilename(IScope scope, String name,
+                GenerationType type) {
             // Generate filename without an extension.
-            return generateFilename(scope, name, null);
+            return generateFilename(scope, name, null, type);
         }
 
         public String generateFilename(IScope scope, String name,
-                String extension) {
+                String extension, GenerationType type) {
             String filename;
-            if (name.startsWith("red5RecordDemo"))
+            if (type == GenerationType.RECORD)
                 filename = recordPath + name;
             else
                 filename = playbackPath + name;
